# pomodoro_technique

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  message_box.cpp  message_box.h  pomodoro.pro  widget.cpp  widget.h
.github/workflows/: windows.yaml
